# gear-nest

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  docker-compose.yml
docs/: DEPLOY.md  PHASE2.md  PHASE3.md
gear-nest-api/: mvnw  (+4 more)
gear-nest-pipeline/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile
gear-nest-pipeline/src/: config.rs  dedup_reviews.rs  full_sync.rs  lib.rs  main.rs  models.rs  price_sync.rs  sync_reviews.rs
gear-nest-pipeline/src/db/: migrations.rs  mod.rs
gear-nest-pipeline/src/embeddings/: chunk.rs  mod.rs
gear-nest-pipeline/src/entity_resolution/: mod.rs
gear-nest-pipeline/src/normalizer/: brand.rs  category.rs  mod.rs  text.rs
gear-nest-pipeline/src/price_history/: mod.rs
gear-nest-pipeline/src/prices/: mod.rs
gear-nest-pipeline/src/reviews/: mod.rs
gear-nest-pipeline/src/scrapers/: amazon.rs  backcountry.rs  cabelas.rs  campsaver.rs  garagegrowngear.rs  jsonld.rs  mod.rs  moosejaw.rs  rei.rs  steepandcheap.rs  transport.rs
gear-nest-pipeline/tests/: amazon_reviews_parser.rs  backcountry_parser.rs  backcountry_reviews_parser.rs  cabelas_parser.rs  cabelas_reviews_parser.rs  campsaver_parser.rs  campsaver_reviews_parser.rs  dedup_reviews_e2e.rs  full_sync_e2e.rs  garagegrowngear_parser.rs  garagegrowngear_reviews_parser.rs  integration_amazon.rs  moosejaw_parser.rs  moosejaw_reviews_parser.rs  price_sync_e2e.rs  rei_cj.rs  rei_reviews_parser.rs  steepandcheap_parser.rs  steepandcheap_reviews_parser.rs  sync_reviews_e2e.rs
gear-nest-pipeline/tests/fixtures/: amazon_reviews.html  backcountry_product.html  backcountry_reviews.html  cabelas_product.html  cabelas_reviews.html  campsaver_product.html  campsaver_reviews.html  cj_rei_products.json  garagegrowngear_product.html  garagegrowngear_reviews.html  moosejaw_product.html  moosejaw_reviews.html  rei_reviews.html  steepandcheap_product.html  steepandcheap_reviews.html
(+124 files in other folders)
