[workspace]
resolver = "2"
members = ["."]

[package]
name = "gear-nest-pipeline"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
publish = false
description = "GearNest ingestion pipeline — scraping, normalization, entity resolution, embeddings, price sync"

[[bin]]
name = "gear-nest-pipeline"
path = "src/main.rs"

[lib]
name = "gear_nest_pipeline"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "migrate",
] }
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
once_cell = "1"
regex = "1"
unicode-normalization = "0.1"
deunicode = "1"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
